--- a/demo.html
+++ b/demo.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <script src="/demo.js"></script>
+    <script src="./Events(Common Events and Event Argument).js"></script>
+
 </body>
 </html>
