--- a/DOM/demo.html
+++ b/DOM/demo.html
@@ -16,7 +16,10 @@
     }
 
     </style>
-  
+  <div id="container">
+    <input type="button" id="btn">
+
+  </div>
 <div id="myid" class="myclass">
     <h1>tittle</h1>
   <p id ="p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo explicabo voluptatibus ab nihil nostrum molestias dolore provident est fugiat laborum temporibus quidem, odio ad, ullam laudantium, eius delectus laboriosam amet?</p>
