--- a/DOM/demo.html
+++ b/DOM/demo.html
@@ -17,7 +17,7 @@
 
     </style>
   <div id="container">
-    <input type="button" id="btn">
+    <button id="btn">enter</button>
 
   </div>
 <div id="myid" class="myclass">
